html_css_studies

--- a/index.html
+++ b/index.html
@@ -10,17 +10,57 @@
 </head>
 
 <body>
-    <h3>Tables</h3>
+    <h2>Tables</h2>
     <table>
         <tr>
             <th>Product Name</th>
             <th>Category</th>
             <th>Unit Price</th>
         </tr>
+
+        <tr>
+            <td>Pc</td>
+            <td>Tech</td>
+            <td>1200$</td>
+        </tr>
+
+        <tr>
+            <td>Iron</td>
+            <td>House</td>
+            <td>200$</td>
+        </tr>
+
     </table>
 
+    <h3>Forms</h3>
+
+    <form>
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" required placeholder="First Name" name="firstName" minlength="6" maxlength="20">
+
+        <br>
 
 
+        <label for="number">Number</label>
+        <input type="number" id="number" placeholder="Number">
+
+<br>
+
+<label for="cbx">Gender</label>
+
+
+    </form>
+
+    <!-- requiered: artik bu alanin bos birakilamayacagi ve doldurlulmasi gerektigini ifade eder -->
+
+    <!-- placeholder: form icine yazilacak ifadenin ne olduguna dair cikan aciklama yazisinin yazildigi alandir. -->
+
+    <!-- name: girilen First Name bilgilerinin veri tabanindan cagirmak icin verilen isimdir. -->
+
+    <!-- minlength ve maxlength degerleri girilecek min ve max karakter sayilarini belirtir. -->
+
+
+    <!-- drop down menu (html deki karsiligi "select" tir) -->
 
 
 
