--- a/index.html
+++ b/index.html
@@ -44,9 +44,18 @@
         <label for="number">Number</label>
         <input type="number" id="number" placeholder="Number">
 
-<br>
+        <br>
 
-<label for="cbx">Gender</label>
+        <label for="cbx">Gender</label>
+        
+        <select name="gender" id="cbx">
+            <option value="">Choose</option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+            <option value="Others">Others</option>
+        </select>
+
+
 
 
     </form>
