--- a/css_color.html
+++ b/css_color.html
@@ -8,7 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
 
-    <title>CSS</title>
+    <style>
+p{
+color: blue;
+font-size: 15px;
+font-family: 'Roboto', sans-serif;
+}
+
+    </style>
+
+    <title>CSS_color</title>
 </head>
 
 <body>
@@ -17,17 +26,16 @@
 
     <h4>About US</h4>
 
-    <p style="color: crimson; font-size: 15px; font-family: 'Courier New', Courier, monospace;">
+    <p>
         &emsp; Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum modi voluptas obcaecati omnis quo dolore.
         Quia, eaque quod dicta sapiente, mollitia laboriosam nulla non sunt id nemo sed quos expedita!</p>
 
     <h4>Our Mission</h4>
 
-    <p style="color: darkturquoise; font-family: 'Roboto', sans-serif;">
+    <p >
         &emsp; Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet repellendus delectus itaque mollitia
         quidem consequatur recusandae ducimus nisi quos sequi sunt molestiae iure repellat, error minus, quod hic
         aperiam quo?</p>
-
 
 </body>
 
