--- a/css.html
+++ b/css.html
@@ -25,7 +25,7 @@
 
     <p style="color: darkturquoise; font-family: 'Roboto', sans-serif;">
         &emsp; Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet repellendus delectus itaque mollitia
-        quidem consequatur recusandae ducimus nisi quos sequi sunt molestiae iure repellat, error minus, quod hic
+        quidem consequatur <span style="color: chartreuse;">consequatur recusandae </span> recusandae ducimus nisi quos sequi sunt molestiae iure repellat, error minus, quod hic
         aperiam quo?</p>
 
 
