--- a/css_class.html
+++ b/css_class.html
@@ -9,23 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
 
     <style>
-        p {
-            color: blue;
-            font-size: 15px;
-            font-family: 'Roboto', sans-serif;
+        
+        .test {
+            color: cyan;
         }
-
-        p span {
-            color: cornsilk;
-        }
-
-        h4 {
-            color: crimson;
-        }
-
-        /* body{
-    color: snow;
-} */
     </style>
 
     <title>CSS_color</title>
@@ -35,15 +22,15 @@
 
     <!-- CSS Cascading Style Sheet -->
 
-    <h4>About US</h4>
+    <h4 class="test">About US</h4>
 
     <p>
         &emsp; Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum modi voluptas obcaecati omnis quo dolore.
         Quia, eaque quod dicta sapiente, mollitia laboriosam nulla non sunt id nemo sed quos expedita!</p>
 
-    <h4 style="color: rgb(60, 255, 0);">Our Mission</h4>
+    <h4>Our Mission</h4>
 
-    <p>
+    <p class="test">
         &emsp; Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet repellendus delectus itaque mollitia
         quidem <span>consequatur recusandae </span> ducimus nisi quos sequi sunt molestiae iure repellat, error minus,
         quod hic
