--- a/css_class.html
+++ b/css_class.html
@@ -9,13 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
 
     <style>
-        
         .test {
             color: cyan;
         }
+
+        #test_2 {
+            color: darkgoldenrod;
+        }
     </style>
 
-    <title>CSS_color</title>
+    <title>CSS_Class</title>
 </head>
 
 <body>
@@ -28,7 +31,7 @@
         &emsp; Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum modi voluptas obcaecati omnis quo dolore.
         Quia, eaque quod dicta sapiente, mollitia laboriosam nulla non sunt id nemo sed quos expedita!</p>
 
-    <h4>Our Mission</h4>
+    <h4 id="test_2">Our Mission</h4>
 
     <p class="test">
         &emsp; Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet repellendus delectus itaque mollitia
