--- a/css_style.html
+++ b/css_style.html
@@ -7,26 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/style.css">
 
-    <title>CSS</title>
+    <title>CSS_Style</title>
 </head>
 
 <body>
 
     <!-- CSS Cascading Style Sheet -->
 
-    <h4>About US</h4>
+    <h4 class="test">About US</h4>
 
-    <p style="color: crimson; font-size: 15px; font-family: 'Courier New', Courier, monospace;">
+    <p>
         &emsp; Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum modi voluptas obcaecati omnis quo dolore.
         Quia, eaque quod dicta sapiente, mollitia laboriosam nulla non sunt id nemo sed quos expedita!</p>
 
-    <h4>Our Mission</h4>
+    <h4 id="test_2">Our Mission</h4>
 
-    <p style="color: darkturquoise; font-family: 'Roboto', sans-serif;">
+    <p class="test">
         &emsp; Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet repellendus delectus itaque mollitia
-        quidem consequatur <span style="color: chartreuse;">consequatur recusandae </span> recusandae ducimus nisi quos
-        sequi sunt molestiae iure repellat, error minus, quod hic
+        quidem <span>consequatur recusandae </span> ducimus nisi quos sequi sunt molestiae iure repellat, error minus,
+        quod hic
         aperiam quo?</p>
 
 </body>
